# fusebox

./: .gitignore  Cargo.toml  README.md  download-smollm2.py  justfile  make-safetensor.py  make-transformer-weights.py  model.safetensors
examples/: linear.rs  run.rs  smollm2.rs  transformer.rs
examples/linear/: main.rs  make-safetensor.py
examples/smollm2/: download-smollm2.py  main.rs  model.rs
fusebox_macros/: Cargo.toml
fusebox_macros/src/: lib.rs
runner/: go.mod  go.sum  main.go
src/: builder.rs  checkpoint.rs  device.rs  dtype.rs  engine.rs  error.rs  ir.rs  lib.rs  module_api.rs  pjrt_runtime.rs  print_mlir.rs  safetensor_shapes.rs  shape.rs  signature.rs  tensor.rs  trace.rs  trace_fn.rs  value.rs  weights.rs
src/nn/: embedding.rs  linear.rs  mod.rs  rms_norm.rs
tests/: error_tests.rs  mlir_snapshots.rs  shape_inference.rs
