[workspace]
members = [".", "fusebox_macros"]

[package]
name = "fusebox"
version = "0.1.0"
edition = "2024"

[dependencies]
fusebox_macros = { path = "fusebox_macros" }
pjrt = "0.2.0"
safetensors = "0.7.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
tempfile = "3"
tokenizers = "0.20"
